--- a/metadata.yaml
+++ b/metadata.yaml
@@ -39,5 +39,6 @@ subjects:
 - !lcc 'B'
 - !lcsh 'Metaphysics'
 - !lcsh 'Life'
+- GITenberg
 title: Creative Evolution
 url: http://www.gutenberg.org/ebooks/26163
